log/build_2025-07-30_09-47-21/follow_ros/stderr.log
  File "/home/orangepi/follow_camera/install/follow_ros/lib/python3.10/site-packages/follow_ros/tape_tracker.py", line 29
    self.result_queue = queue.Queue(maxsize=ernos
                                   ^
SyntaxError: '(' was never closed

